add registration